# fleetwatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: design.md
docs/superpowers/specs/: 2026-06-17-fleetwatch-design.md
src/fleetwatch/: __init__.py  cli.py  config.py  core.py  models.py  palette.py  remote.py  render.py  summarize.py  tailer.py  tui.py  util.py
src/fleetwatch/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py  grok.py
src/fleetwatcher/: __init__.py  cli.py  config.py  core.py  models.py  palette.py  remote.py  render.py  tui.py
src/fleetwatcher/adapters/: __init__.py  base.py  claude.py  grok.py
tests/: test_claude.py  test_codex.py  test_gemini.py  test_grok.py  test_remote.py  test_render.py  test_summarize.py  test_tui.py
tests/fixtures/claude/-Users-luke-workspace-demo/: 11111111-1111-1111-1111-111111111111.jsonl  22222222-2222-2222-2222-222222222222.jsonl  33333333-3333-3333-3333-333333333333.jsonl
tests/fixtures/codex/: history.jsonl
tests/fixtures/codex/sessions/2026/06/17/: rollout-2026-06-17T10-00-00-019ed000-1111-7000-aaaa-000000000001.jsonl  rollout-2026-06-17T11-00-00-019ed000-1111-7000-aaaa-000000000002.jsonl  rollout-2026-06-17T12-00-00-019ed000-1111-7000-aaaa-000000000003.jsonl
tests/fixtures/gemini/tmp/cyoa-ios/: .project_root  logs.json
tests/fixtures/gemini/tmp/cyoa-ios/chats/: session-2026-06-13T20-01-1276a803.jsonl
tests/fixtures/gemini/tmp/orrery/: .project_root
tests/fixtures/gemini/tmp/orrery/chats/: session-2026-06-15T22-15-28f49277.jsonl
tests/fixtures/grok/: active_sessions.json
tests/fixtures/grok/sessions/%2FUsers%2Fluke%2Fworkspace%2Fbipolar-ios/: prompt_history.jsonl
tests/fixtures/grok/sessions/%2FUsers%2Fluke%2Fworkspace%2Fbipolar-ios/019ec29d-b5b9-7110-9084-617b5960194f/: events.jsonl
tests/fixtures/grok/sessions/%2FUsers%2Fluke%2Fworkspace%2Fcyoa-ios/: prompt_history.jsonl
tests/fixtures/grok/sessions/%2FUsers%2Fluke%2Fworkspace%2Fcyoa-ios/019ec29d-f3e0-74e1-9300-b61109764a4f/: chat_history.jsonl  events.jsonl  summary.json
